Backport fix for bug when ICQ or AIM status icon stays turning forever if connection is closed on login

BUG: 126754


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=567996